--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./index.css">
 
   <title>Frontend Mentor | Intro component with sign up form</title>
@@ -25,22 +26,26 @@
 </head>
 
 <body>
-
-  Learn to code by watching others
-
-  See how experienced developers solve problems in real-time. Watching scripted tutorials is great,
-  but understanding how developers think is invaluable.
-
-  Try it free 7 days then $20/mo. thereafter
-
-  First Name
-  Last Name
-  Email Address
-  Password
-
-  Claim your free trial
-
-  By clicking the button, you are agreeing to our Terms and Services
+  <section>
+    <header>
+      <h2>Learn to code by watching others</h2>
+      <p>
+        See how experienced developers solve problems in real-time. Watching scripted tutorials is great,
+        but understanding how developers think is invaluable.
+      </p>
+    </header>
+    <main>
+      <a href="#0"><b>Try it free 7 days</b> then $20/mo. thereafter</a>
+      <form action="#">
+        <input type="text" name="first_name" placeholder="First Name">
+        <input type="text" name="last_name" placeholder="Last Name">
+        <input type="email" name="password" placeholder="Email Address">
+        <input type="password" name="email" placeholder="Password">
+        <button type="submit">Claim your free trial</button>
+        <p>By clicking the button, you are agreeing to our <a href="#0">Terms and Services</a></p>
+      </form>
+    </main>
+  </section>
 
   <footer>
     <p class="attribution">
