First touch to the layout

--- a/index.html
+++ b/index.html
@@ -26,23 +26,24 @@
 </head>
 
 <body>
-  <section>
+  <section class="signup">
     <header>
-      <h2>Learn to code by watching others</h2>
+      <h1>Learn to code by watching others</h1>
       <p>
         See how experienced developers solve problems in real-time. Watching scripted tutorials is great,
         but understanding how developers think is invaluable.
       </p>
     </header>
     <main>
-      <a href="#0"><b>Try it free 7 days</b> then $20/mo. thereafter</a>
+      <a class="btn btn-cta shadow" href="#0"><b>Try it free 7 days</b> then $20/mo. thereafter</a>
       <form action="#">
         <input type="text" name="first_name" placeholder="First Name">
         <input type="text" name="last_name" placeholder="Last Name">
         <input type="email" name="password" placeholder="Email Address">
         <input type="password" name="email" placeholder="Password">
-        <button type="submit">Claim your free trial</button>
-        <p>By clicking the button, you are agreeing to our <a href="#0">Terms and Services</a></p>
+        <button class="btn btn-success text-uppercase mb-0" type="submit">Claim your free trial</button>
+        <small>By clicking the button, you are agreeing to our <a class="text-red" href="#0"><b>Terms and
+              Services</b></a></small>
       </form>
     </main>
   </section>
