Changes main tag in section to div

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         but understanding how developers think is invaluable.
       </p>
     </header>
-    <main>
+    <div>
       <p class="cta shadow rounded-lg"><b>Try it free 7 days</b> then $20/mo. thereafter</p>
       <form id="signup" novalidate action="#" class="shadow rounded-lg" method="post">
         <div>
@@ -60,7 +60,7 @@
             href="#0"><b>Terms and
               Services</b></a></small>
       </form>
-    </main>
+    </div>
   </section>
 
   <footer>
