--- a/index.html
+++ b/index.html
@@ -8,21 +8,35 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <title>Frontend Mentor | Profile card component</title>
+  <link rel="stylesheet" href="./base.css">
+  <link rel="stylesheet" href="./main.css">
 </head>
 
 <body>
-  Victor Crest
-  26
-  London
-
-  80K
-  Followers
-
-  803K
-  Likes
-
-  1.4K
-  Photos
+  <div class="card">
+    <div class="card__header">
+      <img class="card__bg-img" src="./images/bg-pattern-card.svg" alt="background pattern">
+    </div>
+    <div class="card__body">
+      <img class="card__img" src="./images/image-victor.jpg" alt="person avatar">
+      <div class="card__name">Victor Crest <span class="card__age">26</span></div>
+      <div class="card__country">London</div>
+    </div>
+    <div class="card__footer">
+      <div class="card__info">
+        <div class="card__info__number">80K</div>
+        <div class="card__info__title">Followers</div>
+      </div>
+      <div class="card__info">
+        <div class="card__info__number">803K</div>
+        <div class="card__info__title">Likes</div>
+      </div>
+      <div class="card__info">
+        <div class="card__info__number">1.4k</div>
+        <div class="card__info__title">Photos</div>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
