--- a/coding-bootcamp-testimonials-slider/index.html
+++ b/coding-bootcamp-testimonials-slider/index.html
@@ -1,38 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Coding Bootcamp Testimonials Slider</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="./index.css">
 </head>
+
 <body>
+  <section class="container">
+    <div class="slider">
+      <div class="slide show">
+        <div class="slide__header">
+          <div class="slide__control">
+            <img id="user-avatar" class="slide__img" src="./images/image-tanya.jpg" alt="Tanya Avatar">
+            <div class="slider__button btn-group">
+              <button class="btn btn--prev">
+                <svg xmlns="http://www.w3.org/2000/svg" width="12" height="18">
+                  <path fill="none" stroke="#8585AC" stroke-width="3" d="M11 1L3 9l8 8" />
+                </svg>
+              </button>
+              <button class="btn btn--next">
+                <svg xmlns="http://www.w3.org/2000/svg" width="13" height="18">
+                  <path fill="none" stroke="#8585AC" stroke-width="3" d="M2 1l8 8-8 8" />
+                </svg>
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="slide__main">
+          <div class="review">
+            <p id="user-review" class="fs-32 fw-300">
+              “ I’ve been interested in coding for a while but never taken the jump, until now.
+              I couldn’t recommend this course enough. I’m now in the job of my dreams and so
+              excited about the future. ”
+            </p>
 
-  “ I’ve been interested in coding for a while but never taken the jump, until now. 
-  I couldn’t recommend this course enough. I’m now in the job of my dreams and so 
-  excited about the future. ”
-
-  Tanya Sinclair
-  UX Engineer
-
-  “ If you want to lay the best foundation possible I’d recommend taking this course. 
-  The depth the instructors go into is incredible. I now feel so confident about 
-  starting up as a professional developer. ”
-
-  John Tarkpor
-  Junior Front-end Developer
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+            <p>
+              <span class="fw-700" id="user-name">Tanya Sinclair</span>
+              <span id="user-profile" class="br fw-500 text-light">UX Engineer</span>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <script src="./index.js"></script>
 </body>
+
 </html>
